Generalized the 'findFile' function in 'fileutil' to accept filenames or filenames+extensions, such as 'junk.fits[dq,1]'.  If a suffix is provided, it must exist in the file in order to return True.  The WFPCObservation class also got corrected slightly to correctly recognize 'sdq' as the extension name for WFPC2 DQ extensions from c1h or c1f.fits files.  WJH
git-svn-id: http://svn.stsci.edu/svn/ssb/stsci_python/stsci_python/trunk/pydrizzle@67 fe389314-cf27-0410-b35b-8c050e845b92

--- a/lib/History
+++ b/lib/History
@@ -1,4 +1,10 @@
 ### PyDrizzle Revision Changes
+Version 5.0.19 (9-July-2004) WJH
+      - 'fileutil.findFile' made more general with the ability to determine
+        whether the file with a given extension exists, not just the filename
+        itself.  
+      - Modified 'findDQName' for WFPCObservation class to set dq_extname 
+        to 'sdq,1' if input is FITS file.
 Version 5.0.18 (2-July-2004) WJH
       - Updated ImType class to support different files for SCI and DQ
         arrays, such as those for WFPC2 data.
