08/27/04 -- CJH/WJH -- Added support for STIS to makewcs.
git-svn-id: http://svn.stsci.edu/svn/ssb/stsci_python/stsci_python/trunk/pydrizzle@100 fe389314-cf27-0410-b35b-8c050e845b92

--- a/lib/History
+++ b/lib/History
@@ -1,4 +1,7 @@
 ### PyDrizzle Revision Changes
+Version 5.1.1 (27-August-2004) CJH
+      - Update to fileutil.py
+        Added support for dealing with an 'ANY' DETCHIP value in and IDCTAB.
 Version 5.1.0 (24-August-2004) WJH
       - (OPR 51892)
         Corrected problem with processing HRC data where a DGEOFILE has been
