08/30/04 -- CJH -- If fileutil.py module the detchip object is cast as a string type prior to the call to the isdigit() method.
git-svn-id: http://svn.stsci.edu/svn/ssb/stsci_python/stsci_python/trunk/pydrizzle@103 fe389314-cf27-0410-b35b-8c050e845b92

--- a/lib/History
+++ b/lib/History
@@ -1,4 +1,7 @@
 ### PyDrizzle Revision Changes
+Version 5.1.2 (30-August-2004) CJH
+      - Update to fileutil.py
+        Detchip object cast as string before attempt to call isdigit() method.
 Version 5.1.1 (27-August-2004) CJH
       - Update to fileutil.py
         Added support for dealing with an 'ANY' DETCHIP value in and IDCTAB.
