--- a/lib/History
+++ b/lib/History
@@ -1,4 +1,6 @@
 ### PyDrizzle Revision Changes
+Version 5.1.3 (30-August-2004) WJH
+      - Eliminated generation of context image for single drizzling.
 Version 5.1.2 (30-August-2004) CJH
       - Update to fileutil.py
         Detchip object cast as string before attempt to call isdigit() method.
