Changed references of header['detector'] to header[self.DETECTOR_NAME] to account for lack of 'detector' keyword in NICMOS headers.  Also, changed naming convention for DQ files associated with GEIS WFPC2 inputs.  WJH
git-svn-id: http://svn.stsci.edu/svn/ssb/stsci_python/stsci_python/trunk/pydrizzle@111 fe389314-cf27-0410-b35b-8c050e845b92

--- a/lib/History
+++ b/lib/History
@@ -1,4 +1,10 @@
 ### PyDrizzle Revision Changes
+Version 5.1.4 (7-Sept-2004) WJH
+      - Changed references of header['detector'] to header[self.DETECTOR_NAME]
+        to account for lack of 'detector' keyword in NICMOS headers. This change
+        affected drutil, fileutil and __init__.
+      - Changed naming convention for MEF DQ files associated with input
+        WFPC2 GEIS images.
 Version 5.1.3 (30-August-2004) WJH
       - Eliminated generation of context image for single drizzling.
       - Changed usage of chip for 'computeCubicCoeffs' to rely instead on
