09/27/04 -- CJH -- Removed diagnostic print statements related to the use of DGEO files in the exposture.py module.
git-svn-id: http://svn.stsci.edu/svn/ssb/stsci_python/stsci_python/trunk/pydrizzle@141 fe389314-cf27-0410-b35b-8c050e845b92

--- a/lib/History
+++ b/lib/History
@@ -1,4 +1,7 @@
 ### PyDrizzle Revision Changes
+Version 5.2.3 (27-Sept-2004) CJH
+      - Removed diagnostic print statments relating to the use of DGEO files
+        in the exposure.py module.
 Version 5.2.2 (21-Sept-2004) WJH
       - Fixed offset problems when dealing with subarrays so they align with
         full images.
