--- a/lib/History
+++ b/lib/History
@@ -1,4 +1,8 @@
 ### PyDrizzle Revision Changes
+Version 5.3.3 (20-Dec-2004) WJH
+      - (OPR 52619) Modified Exposure class to not expand DGEOFILE filename
+        when reporting the XGIM and YGIM drizzle parameters. 
+
 Version 5.3.2 (7-Dec-2004) WJH
       - Added 'createReferenceWCS' method to WCSObject class to support
         output of WCS for use as a reference WCS with shiftfiles.  Required
