--- a/lib/History
+++ b/lib/History
@@ -1,4 +1,8 @@
 ### PyDrizzle Revision Changes
+Version 5.3.4 (6-Jan-2005) WJH
+      - WCSUTIL: Corrected bug in 'rd2xy' where the cross terms from the
+        CD matrix were swapped.
+        
 Version 5.3.3 (20-Dec-2004) WJH
       - (OPR 52619) Modified Exposure class to not expand DGEOFILE filename
         when reporting the XGIM and YGIM drizzle parameters. 
