--- a/lib/History
+++ b/lib/History
@@ -1,7 +1,18 @@
 ### PyDrizzle Revision Changes
-Version 5.3.4 (6-Jan-2005) WJH
-      - WCSUTIL: Corrected bug in 'rd2xy' where the cross terms from the
-        CD matrix were swapped.
+Version 5.4.0 (13-Dec-2005) WJH
+      - Removed dependency on DQPars module and classes.  
+      - Expanded the formats supported by the 'bits' parameter to 
+        allow the user to specify either a single value for the final
+        drizzle step or separate (possibly equal) values for final
+        drizzling and separate drizzling.  Doc string for PyDrizzle 
+        class was updated to describe newly supported options.  This
+        expansion remains completely backwards compatible with previous
+        definition and usage for final drizzle step.
+      - Added 'single_driz_mask' to parlist to support separate masks
+        for single and final drizzle processing.
+      - Modified 'buildmask' to use a single function for all name 
+        generation for masks, and modified both 'buildMask' functions to 
+        require an output filename as input.
         
 Version 5.3.3 (20-Dec-2004) WJH
       - (OPR 52619) Modified Exposure class to not expand DGEOFILE filename
