--- a/doc/History
+++ b/doc/History
@@ -4,9 +4,10 @@ Version 5.5.1 (25-April-2005) WJH
         Resetting the output frame using the SkyField object now works when
         'crpix' is specified, and when object is initialized with shape and no
         set method gets run.
-      - The 'repr' method of SkyField was updated to also print out crpix values.
-      - History cards will be added to PRIMARY header reporting the versions
+      - (OPR 53467)
+        History cards will be added to PRIMARY header reporting the versions
         of PyDrizzle, numarray and PyFITS that were used.
+      - The 'repr' method of SkyField was updated to also print out crpix values.
       - An additional check was added to 'readShiftFile' to immediately recognize
         when a specified reference WCS can not be found, raising an Exception when
         it can not be located.
